--- a/5pm-ec2-demo.yml
+++ b/5pm-ec2-demo.yml
@@ -22,5 +22,5 @@ Resources:
         - !Ref MySecurityGroup
       Tags:
         - Key: Name
-          Value: 9.30am-ec2
+          Value: 9.30amec2
 
