--- a/s3.yml
+++ b/s3.yml
@@ -24,4 +24,6 @@ Resources:
                 Action:
                   - s3:ListBucket
                   - s3:GetObject
+                  - s3:PutObject
+                  - ec2:Describe*
                 Resource: "*"
