--- a/s3.yml
+++ b/s3.yml
@@ -16,7 +16,7 @@ Resources:
             Action:
               - sts:AssumeRole
       Policies:
-        - PolicyName: MyExamplePolicy
+        - PolicyName: 1030am-Policy
           PolicyDocument:
             Version: '2012-10-17'
             Statement:
